[package]
name = "aseqkeeper"
version = "0.1.0"
authors = ["David Moreno <dmoreno@coralbits.com>"]
edition = "2018"

[dependencies]

alsa = "0.2.1"
clap = "2.32.0"
flexi_logger = "0.11.1"
log = "0.4.6"
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false
